# Automaton

./: .gitignore  CMakeLists.txt  automaton.h  main.cpp
lib/: CMakeLists.txt  automaton.cpp  automaton.h
tests/: CMakeLists.txt
